调整fidller操作流程。添加提交按钮。 server端添加一个try catch

--- a/FiddlerAddon/FiddlerAddon/DebuggerConsoleView.resx
+++ b/FiddlerAddon/FiddlerAddon/DebuggerConsoleView.resx
@@ -130,61 +130,85 @@
   <data name="btnNew.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABoAAAAgCAYAAAAMq2gFAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFuSURBVEhL7dbNS8JwHMdx/5YOdWotaEYeo2Z66OnUqToV
-        /hHdujQkipAirEOPENRBOiUND26Gbhr0cMroUYN0f0H56WuZWmmbc942eLPji335PcyRO5uAFhumRgyX
-        l7zIqPMoFN5g9HG8ymPIS25qqKEuDzjcxwXC3g1ZBI2XAA+9jXd12IfEFoOHhADSdLEmIBfU3R4o2wwe
-        Fb8u1iTEIbnHfWHqIn1V/S+zAHKWsC7CluqO0CKogj0ll2tiFkJVWGrlD2YxVMGezwM/sBZA1dhqGTMN
-        XR+5aBE4kdrvrR2tRnWHRfZi/RMzDRWRaJCFvNldN2mDhRTsxG08YB6KrDEICe049nf8W2ihDWLQYx56
-        ifDIiIP6nfYjK8+YhzTZA0326lc8sFWfecjwARzlkVNsqIH7qjxae3SGV9nv8dqjs0dn76OGfpNrLpjv
-        fZSLjdKdwlPu1iQNIK/MwpEWfUiHp6jplnRzMok7eQ4fzLPZbhdR4t0AAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFcSURBVEhL7dW9SwJxHMfx+1saasoMssgx6kyHnqamair8
+        I9paEokipIiroUcIapCmInHwztA7DXqYMnrUIPUvKD99L3+gUer5u3OJ+8J7/H1e252Qv5hEMT5CjRqu
+        IPuQ1RZQKn3A6Anvyjg99FDDTXV96MJjIkDYJ5uqfwRNsMfepro56kdy24GnZACksbnaZwJyQ9vrgbrj
+        wLMabIiZhFxI7bvKmLZEc7UxC6BehnURtsxmf59FUAV7Sa2w6Z9nIVSFpVfZfOUshirY62WIEeVrAVSN
+        rTHGBHR77P4eTR/0/R1h2q4TuasNc5COxCQnlK3umsmbTshSJ+4TIX4ouu5AONCOk2BH3cKLbYhIXn7o
+        LSoiGxlq3PkAcsosP1RU9HyN0z/Ymp8fMlxMRF61IZ5siDsb4s6GuPu/UD4+Rv8NkfK0JnkQBXUOQibi
+        R+ZsmpppSXenU3hQ5vEFzLPZbjJOOWEAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="btnOpen.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAX/SURBVFhHxVf5U5NHGPb/6/QXtQ5aR6y1Ux07tPVCKhXv
-        26rtWKajSFWuhEPIwRFIuBPCkQAhhCMXhCSYhBwkIQcJT9/d8GUSLh2Hjt/MM7v7fu9+77O7z7u73wF8
-        4efAF46PXQlsbGxAJO1CnbQTnf1a6I2zWHJ7EE8kwN7t17MrAY/PD7FciVA4ArPdAc2YAZLOPlSIpKhv
-        VaFHo4NhxoxlzwrS6fRn89mVwNSsBT1DurwPs4EzeP1BTM3Z+PsGIvOytgXvFb0YGJmAyWyHzx/4ZFK7
-        EmAjNM3bOAE24SxwmpCiwa4zpIAkIbEORGMp2J0+jBrmoegbQa2kE9XNCjjdH5BKkdMez64ERLIuGkmQ
-        B05RZKYH9mFF/zB0xnksunyIxNYRSwJrCSJBiMSB1RgQWgNfPrN1AdFodE/N7EggFk+gsl5O07jBR/3B
-        F8jTg5r00LKpB7FcBaVaT6SssLv8CFJwTzCJ12IpFhYWEA6H91yOHQnYHC7IlWo+3QyTM9aP6qGblqyB
-        yDA9iFu7UdOigM5ggmv5w6cRCE61w9H+mEPV/C+048bsOivV/58e+AwELRo4VU+Q8rbTInZD3tkB66I7
-        K7I6Wn9BD2xJWNZxMeYIMU5i/Bw9cAI22V0kXVIg0IKNlTpafylCkQTYRwPhfD0IWSBkQDYwiVEQYpiE
-        yMT4KXrgBKzSu9RDRdHq4FsQkeI7sqOZtbshy9FD3qgpaHbUlAHhnCwIRgE/YdbuQVNbN5aWlnbMCE7A
-        IrlDBJREQAzTZBOUg2M8tVhaqXXTGJ4wfXS62ahZ+rFRB1jwCOALAxr9LHrUo3C73YjFyGnLwwmYW25n
-        CND09/S3QT9tzea0pGswTw9xlvc7TDcLLgReoeBeCu5ZBWQqDfSUDT6fD8kkddyJwOz7W0S/iwjUQCRp
-        w4I7kFnD6AbXg112DzZaJisRtby/AXNTGeYaSjFbX4KZussw1pyH4W0RxivPQffqR4z+cxrav05A8/w4
-        Bp4eQ/8fBeh5dASqB4ehvH+IIx6P8/TkM2BquEnROhB3V+E1HTYsMFtDK+0HdZIOpBergOWmfYGz/zr6
-        /j4Fj4dOViLBCRjrbxCBdthNtWhWDGSnsr/5CbD0BmnLn0gaSvYFXfcOYlzTyTWRJWAQXeczMKyVo3fY
-        CLaGi6rziOgeIOVsxPrU1X0JvqT6Fe3lJbDZrAgEAvyg4jMwWVtGGmiHVKHA5LwLXhLPjOwy7JP1SM09
-        RGLyCpKTxdkyUy/Os7F2rk2oJycy9vjEZTSXHcTUpB7Ly8s8I9jFhhPQV1+jDaiVHyBagxVjHeVI2l4B
-        zmokqGN84lIWifFLZMtpszrZBB/2ntUFH6HUV59CX305FhcXEQqFssc0JzD2rhRpXxOG+qqgaH0LXeMV
-        rDvESBrLENOf54jnQLAJ9tw2r+syfQSEtEUQ/34IMzMmeL1eJOhaJzycwOibUkrct/COFUNTdxEbjkqk
-        7S8RHfsZaxxFm2WmnbEzW74947sd7U+PYKRXwnfDSCSSdzpyAtrKq9jw1MCivAij9Crgrif2FxAdOYfI
-        yE8EoczUM/ZMmUGuT77N1X0aTXdPw2KxYGVlBevrdMDkPJzAUMVvWJ2vwHDtBUq7KiTnniCsPYOI9iwv
-        tyKyzZbrd5b6sT5nsTp0Bo3XvoZBp+Fpt7a2tu12xAloKkrg0NzGtIzE6BLzgCHND1jNxdCW9i7veL9N
-        37mW4+isuAW73Y5gMLjj/ZATGHxZgilJCVKOd1ibKEVIfQrBQQKVISpZW0DWxuwCNv1Dg99nbf7+k6gq
-        /gom03R219t2EJCBE+gtL4K68hekFl4hMPgdggMnN1HIy8AmttqDg4IfKwu5HyuZ33jtN1C3ieBwOPa8
-        F3ICU7LnaLx/IoPbhWi8UwjRzeOouXEUsofHIH9WQDgK+YMCSB5/S7YCtBCaGO5TnezMJn90DKoXBVA8
-        OwxF7QtYzGb4/f4dT8G8NGR5yRTK0oQx3g84nU7+Tbbf7/Urx2eAOTASTKXsHr8fYFstO/8/9h/5xf+O
-        /wOEI13A75iszwAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAXYSURBVFhHzVb5U9NHFO//1+kvah20jlprpzp2aKtWpVLx
+        vq3ajmU6iFTlSjiEHByBhDshHAkkhHDkgpAEk5CDJOQgyadvN8ckCKgdOvbNfGZ33x7v8/a9fd/vZ/jE
+        8v8lkE6nIRD3olHcg54hNbSGeay43IjF43xur2RHAm6vD0KpHMFQGCabHapJPUQ9g6gWiNHUoUC/SgP9
+        nAmr7jWkUqnsro+XHQnMzJvRP6rJjjLCHGfw+AKYWbDy+WYiU9XQjjeyAQyPT8NossHr838wqR0JMA+N
+        i1beZxfODKcISTp3kyEJJAjxTSASTcLm8GJCvwjZ4DgaRD2oa5PB4XqLZJIW7SI7EhBIesmTADecJMss
+        H9jBsqExaAyLWHZ6EY5uIpoANuJEghCOAetRILgBHj6TZQmRSGTXnNmWQDQWR02TlK4xzb1+6/UX5YOS
+        8qE9mw9CqQJypZZIWWBz+hAg4+5AAi+EYiwtLSEUCu0ajm0JWO1OSOVKft0MujnLe/Ohj0LWTGRYPgg7
+        +lDfLoNGb4Rz9e2HEQjMdMHe9ZBD0fY31FOGfJzlyv8uHziBgFkFh+IRkp4uCmIfpD3dsCy78oc2Uvxz
+        +cAMM4e48QLDMcK/yQdOwCq5jYRTDPjbkV5rpPiLEQzH+aH+UHE+5Lx+xzAhZzhEhpnxD8kHTsAivk07
+        FGStEd4lAWV8d96beZsLkoJ8KPKa1uS9ZoYLvA5EAB9h3uZGa2cfVlZWdr4Bs+gW7ZQTASGMulbIRyb5
+        ocwbpWYWY9PG914385obJviZ8TDgDQEq7Tz6lRNwuVyIRmnRFuEETO03MwTo+vuHOqGdteRjKOodKcoH
+        5vV2182M5wyvETxk3L0OSBQqaOk1eL1eJBK0cYtwAvNvbtAJvbSzHgJRJ5Zc/kwMI2meDzbJHVgpTBYi
+        an5zDabWCiw0l2O+qQxzjRdgqD8L/atSTNWcgeb5d5j46yTUfxyF6ukRDD8+jKHfStD/4CAU9w5Afnc/
+        RywW4/nACRibr5O1bsRctXhBxYUZZjG0UD1oFHUjtVwLrLbuCRxDVzH45wm43fRlJRKcgKHpGhHogs3Y
+        gDbZcP4qh9oeASsvkTL/joS+bE/Qe2cfplQ9PCfyBPSCq/wGxtRSDIwZeAyXFWcR1txD0tGCzZnL2x72
+        sVhR/ISuyjJYrRb4/X5emDgBXUMF5UAXxDIZdItOeCh55iQXYNM1IblwH3HdJSR0F/Ntpp9rc3PFulw/
+        MZ3Rx6YvoK1iH2Z0WqyurvIXwZ4kJ6Ctu0IFqIMXDLXegsnuSiSszwFHHeK0MTb9cx7xKULhmLWkK5zP
+        6wtabd0JDDZVYnl5GcFgMF+WOYHJ1+VIeVsxOlgLWccraFouYdMuRMJQgaj2LEesADldTl845tAUj4Pq
+        Ugh/3Y+5OSM8Hg/i9FuXE05g4mU5PdxX8ExehKrxPNL2GqRsVYhM/oANjtJsm0FGz3TF+p3Q9fggxgdE
+        vBqGw+GicswJqGsuI+2uh1l+HgbxZcDVRMzPITJ+BuHx7wm5NtPP6DNtBoVrinXOvpNovX0SZrMZa2tr
+        2NykalYgnMBo9S9YX6zGWMM5ena1SCw8Qkh9CmH1ad5uRfgdXeG609n501gfPYWWK19Ar1HxZ7exsbH9
+        t0BVXQa76iZmJZSMTiE/KKj6FuuFGN0yLkTBHN+XHS+0H0FP9Q3YbDYEAoGd/wdGqsowIypD0v4aG9Pl
+        CCpPIDBCoDZILRvnkNcVgul5/5u8zjd0HLUXP4fROJuvetsJJzBQWQplzY9ILj2Hf+RrBIaPZ3GMt/4s
+        tuoDI8W6zJrM3FTDl1B2CmC323f9L+QEZiRP0XL3aAY3j6Hl1jEIrh9B/bVDkNw/DOmTEsIhSO+VQPTw
+        K9KVoJ3QynCX+qRnOumDw1A8K4HsyQHIGp7BbDLB5/Nt+xXMCSfA3iXLUPZMGOO9gMPh4Geyq3/vbzlb
+        wEiwLGV/LXsBVmqZ57sZZ8IJfDoB/gGEI13AhssE9AAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="btnSave.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIxSURBVFhH7Ve7rkFBFD3fovN+FyKhoFRqfYFGgki0lAoi
-        xD+QIH6AaISIgkQ8voCCTkP2vWuSPfE6rhP3XLewkx1xzsxea6/ZM2e2Qt/W7XYpGo2Sx+Mht9st3Gq1
-        ksPheMntdjvZbDYKh8NUr9cBdWNKr9cjn88nBjI4JmazWRoMBjQajZ7yyWRCs9mMptOp8PF4TP1+n2Kx
-        GFksFpFIsVik0+l0QUJB5ufgLpdLEFkul3cZqz0cDodULpepWq1SrVaj/X4vhjabTTKbzYS4JpOJcrkc
-        HY9HGUY5lx3AGOj1ejUTKBQKZDAYBAiWbz6fC5B2uy0IcGy8z+fzUgmFZedfJrBYLDQpUCqVZKZIgOe3
-        Wi1JgEmAEJYD9ucEmARqotFovIcASIBAKBR6HwFW4i1LcF53v0YARWU0GoW0AFArwuuiVyWwXq817QLs
-        f2xpv99PgUCAVquVmN/pdC52wY8EuEBwPGuxw+FAm82GttutcLZKpaKdgNPpFBWaSCQomUw+5el0mjKZ
-        jPRUKkXxeFwc83y6XmeP/zdLwINAAmf4K44T8RH4XQIAfvUrqDYfsR/WACZCMsivhyM27xImIpcALyKR
-        iNg+u91OF0dsYJyTkASw1igcvQ0YwLpRAA9R8XobMD4EPgp8FPgo8L8U4MbkHUcxsGVrBgK4gOhtwAAW
-        2kG0hbI5xcNgMChaqWcbUq3jEBsYwMKnGY2xgoy5Pcft5TfacrULCd+QkDnfOb8Af+WP5OzL+nEAAAAA
-        SUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIYSURBVFhH7Ze7rgFRFIbnWXTu90IkFJRKrSfQSBCJllJB
+        hHgHEsQLEI0QUZCIyxNQ0GnIOudf7Mk45pyMMJzCSv6IPXvW/82+ZS+JvqPb7VI0GiWPx0Nut5tltVrJ
+        4XA8JLvdTjabjcLhMNXrdVjdhNTr9cjn83FHYY4Xs9ksDQYDGo1GmjSZTGg2m9F0OmWNx2Pq9/sUi8XI
+        YrEwULFYpNPpdLE+h4QvV5q7XC7+XS6Xly7aYjgcUrlcpmq1SrVajfb7Pbc3m00ym82c12QyUS6Xo+Px
+        yM8QknLYBYDX670boFAokMFgYBNM33w+5/Z2u80AIjee5/N5eSQkpbkSYLFYcAetUSqV5C9Vvt9qtWQA
+        kR//MR2IlwMID6yJRqPxHgAIAKFQ6H0AwuutANDTALCojEYjDy3yPAywXq85gdbA/seW9vv9FAgEaLVa
+        cXun07kPAMJX4Hi+Jw6HA202G9putywRlUrlfgCn08krNJFIUDKZ1KR0Ok2ZTEZWKpWieDzOxzxGVc0H
+        UgWAAIEz/BHhRPzLHLoBgDGmQA8h90+/KwB0wpBh+PUQcsND6SkD4EEkEuHts9vtdBFyw0MJIQNgzrBw
+        9A54wEsVAKtZ74DHB+AD8AH4APwvAFGYoPHVRzG85dIMjbiA6B3wgBc84S0Xp2gMBoNcSqkVn88QcsMD
+        XvCE91V5jtvLM8ry3yRuSPA63zmJvgB/5Y/ksHiZBAAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="btnSubmit.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAASTSURBVFhHtZf7T1NnHMb5OwSGOtSNiwjTOIdOF+eWbMvY
+        smXJsmWbP8xoyDSLuoDs4gzqhigXQbkskKEzDIUBQsqYlEthlaYllNKW3iiFlt4oFkpben123uZw6Bls
+        QCnf5PNLz/d9nqfvec973hODsLJ5xtBq+AR1k0fQYMjCgO0q9ZsCQQTojugXE8AfXATXfBH1hrfxQP8m
+        7k8dx8PpD8CxfAXZfD1c/hm6M7rFBLB7J9CgfwfV2lSUqbaFKFfFoWYiA4+MH6HLmoMJZxe8ASc9IjrF
+        BLAsSlCnywyZLgVY4o46gboth9Fs+oy6LddhXhQjEPTRIzdXrAA12rQV5uFUaBKp2/MG2iynMGSvwpx3
+        klofQVohsgoLMIJfxpNWNWYTi+rxZPw+/R7+tJyDwtEEt/8ZrbLxYgWo1iThtnLbuihTxVPr4wAajR+j
+        2/otJl08+IJuWm39xQpQpUlGqTJ2Q5SrduBX3TFqfZwE31YI66IMwaCfVl27WAEq1ckoUcRGQBzuqPbg
+        t6m30GY+g2F7LRy+aUp17fXBBDC7JahQpaB4LC5iSsbiUaHeh3r9h+gwX4Byvg2LgTnaYfViBbirTEWR
+        PH7TFMu3U+vpFTw0fIpuy4/Quwapjc5DO7GLFaB8bC9uSp+LGiXyXajVvo6m6S/BnynFrEez4rFlBSiT
+        p6FwNCHqlMpTUDeRhRZDNvROAeW2HIIJYHJJUCpLQ4EkYUu4IdmJStVRNE+egcs3S7v+K0Dx6D78JN6+
+        ZRSMJKJS8RrMLintGhbA6BpFkSQd14Z3bCE7USU/AbtHT7uGB3CO4qY4A/lDz28ZheJ0CK33WBsVK8CN
+        4ZdwRZgYdfJFe1Aty8Lo7GNqu2Y/jkyAaSrAz0P7cVmwK4rsRpH4KHoMpdS0G1Y8gqSWAyxIcV14AN8/
+        3R0Vrgn34w9Nbkg38D/vBiaAgWrMFxxE3t8vbIof+HtRKz0JxbMe6vS09ttxOYBDiiv8l5HLezEiLvUn
+        o3joXQwa6+H0rf98wATQO2S4PHAI3/QmbZBk5POPgTN+Czb3xk9IrADf8TJxvjtl3eT1HcR96UXo5sTU
+        yyayMyITYGpehrzew/j6SeqaXOBm4LboC4gtT+Dxu2iFyIoVIKf7VZztTPtPzv2VjvyBLPTo7mHeE53v
+        BCaA0TGOXO4JZHPSV9KRjhzucTySF8C0oKV2suh9KTEBXN553Hp6CqfbM1ic7chEheg8lDYRfAEv3R29
+        YgKQfyU29uFS1/s43XYI2e1HcLX3c/RrW2F3zsLtdm8Ij8cDr9cbwufzwe/3hwgEApRX2HmANFqtVuh0
+        OiiUY+AKOHjQdRcNXTXg9ndicHAQfD4fPB4PfX1964L0kjECgSCESCTCyMgIpFIplEplyIt4Eu+YhYUF
+        qNVqCIXC0EAul4vOzk5wOBy0t7ejtbUVLS0tIZqbm9HU1ITGxsZVIddIz1I/GUs0iBbRJNrEg3gRT+Id
+        Q6aDTBOZNofDAbvdDpvNhpmZGZhMJhgMBga9Xg+tVguNRrMq5BrpCR9DNIgW0STaxIN4Ec9gMIh/ADWT
+        8RzaJRRQAAAAAElFTkSuQmCC
 </value>
   </data>
   <metadata name="openFileDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
